3、添加小字一组音阶，升a与b还未添加

--- a/app/src/main/res/layout/activity_ear_note.xml
+++ b/app/src/main/res/layout/activity_ear_note.xml
@@ -11,10 +11,10 @@
         app:layout_constraintHeight_percent="0.2"
         app:layout_constraintWidth_percent="0.5"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/btn_standard_note"
         android:textColor="@color/red"
         android:textSize="30sp"
-        app:layout_constraintRight_toLeftOf="@id/btn_standard_note"
+        app:layout_constraintRight_toRightOf="parent"
         android:text="@string/question_note"/>
     <Button
         android:id="@+id/btn_standard_note"
@@ -23,19 +23,27 @@
         app:layout_constraintHeight_percent="0.2"
         app:layout_constraintWidth_percent="0.5"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/btn_question_note"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/btn_question_note"
         android:textSize="30sp"
         android:textColor="@color/green"
         android:text="@string/standart_note"/>
+    <TextView
+        android:id="@+id/tv_notice_label"
+        android:layout_marginTop="15dp"
+        app:layout_constraintTop_toBottomOf="@id/btn_standard_note"
+        android:text="@string/notice_label"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
     <Button
         android:id="@+id/btn_c_note"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:tag="c"
+        android:textAllCaps="false"
         android:layout_marginTop="50dp"
-        app:layout_constraintTop_toBottomOf="@id/btn_question_note"
+        app:layout_constraintTop_toBottomOf="@id/tv_notice_label"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@id/btn_cd_note"
         app:layout_constraintHorizontal_chainStyle="spread"
@@ -45,8 +53,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:tag="cd"
+        android:textAllCaps="false"
         android:layout_marginTop="50dp"
-        app:layout_constraintTop_toBottomOf="@id/btn_question_note"
+        app:layout_constraintTop_toBottomOf="@id/tv_notice_label"
         app:layout_constraintLeft_toRightOf="@id/btn_c_note"
         app:layout_constraintRight_toLeftOf="@id/btn_d_note"
         android:text="@string/cd_note"/>
@@ -55,8 +64,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:tag="d"
+        android:textAllCaps="false"
         android:layout_marginTop="50dp"
-        app:layout_constraintTop_toBottomOf="@id/btn_question_note"
+        app:layout_constraintTop_toBottomOf="@id/tv_notice_label"
         app:layout_constraintLeft_toRightOf="@id/btn_cd_note"
         app:layout_constraintRight_toRightOf="parent"
         android:text="@string/d_note"/>
@@ -66,6 +76,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:tag="de"
+        android:textAllCaps="false"
         app:layout_constraintTop_toBottomOf="@id/btn_c_note"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@id/btn_e_note"
@@ -76,6 +87,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:tag="e"
+        android:textAllCaps="false"
         app:layout_constraintTop_toBottomOf="@id/btn_c_note"
         app:layout_constraintLeft_toRightOf="@id/btn_de_note"
         app:layout_constraintRight_toLeftOf="@id/btn_f_note"
@@ -85,6 +97,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:tag="f"
+        android:textAllCaps="false"
         app:layout_constraintTop_toBottomOf="@id/btn_c_note"
         app:layout_constraintLeft_toRightOf="@id/btn_e_note"
         app:layout_constraintRight_toRightOf="parent"
@@ -95,6 +108,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:tag="fg"
+        android:textAllCaps="false"
         app:layout_constraintTop_toBottomOf="@id/btn_de_note"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@id/btn_g_note"
@@ -105,6 +119,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:tag="g"
+        android:textAllCaps="false"
         app:layout_constraintTop_toBottomOf="@id/btn_de_note"
         app:layout_constraintLeft_toRightOf="@id/btn_fg_note"
         app:layout_constraintRight_toLeftOf="@id/btn_ga_note"
@@ -114,6 +129,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:tag="ga"
+        android:textAllCaps="false"
         app:layout_constraintTop_toBottomOf="@id/btn_de_note"
         app:layout_constraintLeft_toRightOf="@id/btn_g_note"
         app:layout_constraintRight_toRightOf="parent"
@@ -124,6 +140,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:tag="a"
+        android:textAllCaps="false"
         app:layout_constraintTop_toBottomOf="@id/btn_fg_note"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@id/btn_ab_note"
@@ -134,6 +151,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:tag="ab"
+        android:textAllCaps="false"
         app:layout_constraintTop_toBottomOf="@id/btn_fg_note"
         app:layout_constraintLeft_toRightOf="@id/btn_a_note"
         app:layout_constraintRight_toLeftOf="@id/btn_b_note"
@@ -143,6 +161,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:tag="b"
+        android:textAllCaps="false"
         app:layout_constraintTop_toBottomOf="@id/btn_fg_note"
         app:layout_constraintLeft_toRightOf="@id/btn_ab_note"
         app:layout_constraintRight_toRightOf="parent"
