--- a/app/src/main/res/layout/activity_ear_note.xml
+++ b/app/src/main/res/layout/activity_ear_note.xml
@@ -167,4 +167,79 @@
         app:layout_constraintRight_toRightOf="parent"
         android:text="@string/b_note"/>
 
+    <TextView
+        android:id="@+id/tv_settings_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:text="@string/settings_label"
+        android:textColor="#ff000000"
+        app:layout_constraintHorizontal_chainStyle="spread"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/sp_start_note"
+        app:layout_constraintTop_toBottomOf="@id/btn_a_note" />
+
+    <Spinner
+        android:id="@+id/sp_start_note"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:tooltipText="@string/sp_hint"
+        app:layout_constraintTop_toBottomOf="@id/btn_a_note"
+        app:layout_constraintLeft_toRightOf="@id/tv_settings_label"
+        app:layout_constraintRight_toLeftOf="@id/sp_end_note"/>
+
+    <Spinner
+        android:id="@+id/sp_end_note"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:tooltipText="@string/sp_hint"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btn_a_note"
+        app:layout_constraintLeft_toRightOf="@id/sp_start_note"/>
+
+
+    <TextView
+        android:id="@+id/tv_notice_range_label"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@id/tv_settings_label"
+        android:text="@string/notice_range_label"
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <TextView
+        android:id="@+id/tv_setting_select_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:text="@string/select_note_label"
+        android:textColor="#ff000000"
+        app:layout_constraintHorizontal_chainStyle="spread"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/sp_start_note"
+        app:layout_constraintTop_toBottomOf="@id/tv_notice_range_label" />
+
+
+
+    <TextView
+        android:id="@+id/tv_select_note"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:hint="@string/tv_select_hint"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_notice_range_label"
+        app:layout_constraintLeft_toRightOf="@id/tv_setting_select_label"/>
+
+
+    <TextView
+        android:id="@+id/tv_notice_select_label"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@id/tv_setting_select_label"
+        android:text="@string/notice_select_label"
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
