--- a/app/src/main/res/layout/activity_ear_note.xml
+++ b/app/src/main/res/layout/activity_ear_note.xml
@@ -42,6 +42,7 @@
         android:layout_height="wrap_content"
         android:tag="c"
         android:textAllCaps="false"
+        android:background="@drawable/btn_selector"
         android:layout_marginTop="50dp"
         app:layout_constraintTop_toBottomOf="@id/tv_notice_label"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -54,6 +55,7 @@
         android:layout_height="wrap_content"
         android:tag="cd"
         android:textAllCaps="false"
+        android:background="@drawable/btn_selector"
         android:layout_marginTop="50dp"
         app:layout_constraintTop_toBottomOf="@id/tv_notice_label"
         app:layout_constraintLeft_toRightOf="@id/btn_c_note"
@@ -65,6 +67,7 @@
         android:layout_height="wrap_content"
         android:tag="d"
         android:textAllCaps="false"
+        android:background="@drawable/btn_selector"
         android:layout_marginTop="50dp"
         app:layout_constraintTop_toBottomOf="@id/tv_notice_label"
         app:layout_constraintLeft_toRightOf="@id/btn_cd_note"
@@ -77,6 +80,8 @@
         android:layout_height="wrap_content"
         android:tag="de"
         android:textAllCaps="false"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/btn_selector"
         app:layout_constraintTop_toBottomOf="@id/btn_c_note"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@id/btn_e_note"
@@ -88,6 +93,8 @@
         android:layout_height="wrap_content"
         android:tag="e"
         android:textAllCaps="false"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/btn_selector"
         app:layout_constraintTop_toBottomOf="@id/btn_c_note"
         app:layout_constraintLeft_toRightOf="@id/btn_de_note"
         app:layout_constraintRight_toLeftOf="@id/btn_f_note"
@@ -98,6 +105,8 @@
         android:layout_height="wrap_content"
         android:tag="f"
         android:textAllCaps="false"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/btn_selector"
         app:layout_constraintTop_toBottomOf="@id/btn_c_note"
         app:layout_constraintLeft_toRightOf="@id/btn_e_note"
         app:layout_constraintRight_toRightOf="parent"
@@ -109,6 +118,8 @@
         android:layout_height="wrap_content"
         android:tag="fg"
         android:textAllCaps="false"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/btn_selector"
         app:layout_constraintTop_toBottomOf="@id/btn_de_note"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@id/btn_g_note"
@@ -120,6 +131,8 @@
         android:layout_height="wrap_content"
         android:tag="g"
         android:textAllCaps="false"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/btn_selector"
         app:layout_constraintTop_toBottomOf="@id/btn_de_note"
         app:layout_constraintLeft_toRightOf="@id/btn_fg_note"
         app:layout_constraintRight_toLeftOf="@id/btn_ga_note"
@@ -130,6 +143,8 @@
         android:layout_height="wrap_content"
         android:tag="ga"
         android:textAllCaps="false"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/btn_selector"
         app:layout_constraintTop_toBottomOf="@id/btn_de_note"
         app:layout_constraintLeft_toRightOf="@id/btn_g_note"
         app:layout_constraintRight_toRightOf="parent"
@@ -141,6 +156,8 @@
         android:layout_height="wrap_content"
         android:tag="a"
         android:textAllCaps="false"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/btn_selector"
         app:layout_constraintTop_toBottomOf="@id/btn_fg_note"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@id/btn_ab_note"
@@ -152,6 +169,8 @@
         android:layout_height="wrap_content"
         android:tag="ab"
         android:textAllCaps="false"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/btn_selector"
         app:layout_constraintTop_toBottomOf="@id/btn_fg_note"
         app:layout_constraintLeft_toRightOf="@id/btn_a_note"
         app:layout_constraintRight_toLeftOf="@id/btn_b_note"
@@ -162,6 +181,8 @@
         android:layout_height="wrap_content"
         android:tag="b"
         android:textAllCaps="false"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/btn_selector"
         app:layout_constraintTop_toBottomOf="@id/btn_fg_note"
         app:layout_constraintLeft_toRightOf="@id/btn_ab_note"
         app:layout_constraintRight_toRightOf="parent"
@@ -185,6 +206,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:tooltipText="@string/sp_hint"
+        android:entries="@array/note_array"
         app:layout_constraintTop_toBottomOf="@id/btn_a_note"
         app:layout_constraintLeft_toRightOf="@id/tv_settings_label"
         app:layout_constraintRight_toLeftOf="@id/sp_end_note"/>
@@ -195,6 +217,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:tooltipText="@string/sp_hint"
+        android:entries="@array/note_array"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/btn_a_note"
         app:layout_constraintLeft_toRightOf="@id/sp_start_note"/>
@@ -219,11 +242,12 @@
         app:layout_constraintHorizontal_chainStyle="spread"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@id/sp_start_note"
-        app:layout_constraintTop_toBottomOf="@id/tv_notice_range_label" />
+        app:layout_constraintTop_toBottomOf="@id/tv_notice_range_label"
+        app:layout_constraintBottom_toTopOf="@id/tv_notice_select_label"/>
 
 
 
-    <TextView
+    <Button
         android:id="@+id/tv_select_note"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -231,13 +255,15 @@
         android:hint="@string/tv_select_hint"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_notice_range_label"
-        app:layout_constraintLeft_toRightOf="@id/tv_setting_select_label"/>
+        app:layout_constraintLeft_toRightOf="@id/tv_setting_select_label"
+        app:layout_constraintBottom_toTopOf="@id/tv_notice_select_label"/>
 
 
     <TextView
         android:id="@+id/tv_notice_select_label"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/tv_setting_select_label"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:text="@string/notice_select_label"
         android:gravity="center"
         android:layout_width="match_parent"
