--- a/app/src/main/res/layout/activity_ear_note.xml
+++ b/app/src/main/res/layout/activity_ear_note.xml
@@ -251,7 +251,7 @@
         android:id="@+id/tv_select_note"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="20dp"
         android:hint="@string/tv_select_hint"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_notice_range_label"
@@ -259,11 +259,11 @@
         app:layout_constraintBottom_toTopOf="@id/tv_notice_select_label"/>
 
 
+    <!--app:layout_constraintBottom_toBottomOf="parent"-->
     <TextView
         android:id="@+id/tv_notice_select_label"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="15dp"
         app:layout_constraintTop_toBottomOf="@id/tv_setting_select_label"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:text="@string/notice_select_label"
         android:gravity="center"
         android:layout_width="match_parent"
